# inc_os_autosd

./: .gitignore  BUILD  Containerfile  MODULE.bazel  README.md  project_config.bzl  versions.json
.github/actions/aib/: action.yml
.github/workflows/: build_and_test_autosd.yml
docs/: conf.py  index.rst
main/: genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
os_images/: .gitignore  README.md  automotive-image-builder.sh  image.aib.yml  vars-devel.yml  vars.yml
os_images/files/: bluechi-agent-qm.conf  bluechi-controller.conf  lola-ipc-pub.service  lola-ipc-sub.service  lola-ipc-test.service
os_images/incubation/inc_orchestrator_demo/: inc_orchestrator.aib.yml
os_images/rpms/: lola-demo-0.5.0-1.src.rpm  lola-demo-0.5.0-1.x86_64.rpm
os_images/rpms/repodata/: 83a3e62e3fd98a10b20640f63888b2d6f02e2f5adf87b9db777b088b3588c170-other.xml.zst  be88f15922c77ab2625de21bd0187571068ea2c2cf5b842b3014b7a6d131c04b-primary.xml.zst  c656134fa0b14c49fc8fac2ba7f6cc0455417f16a2e3ca2bc871c0f388e709a3-filelists.xml.zst  repomd.xml
os_images/scripts/: container-build.sh
reference_integration/: .bazelrc  .bazerlrc  .gitignore  BUILD  MODULE.bazel  README.md  score_modules.MODULE.bazel  score_toolchains.MODULE.bazel
reference_integration/patches/baselibs/: 0001-RH-exception-header.patch  0002-RH-algorithm-header.patch
reference_integration/patches/communication/: 0001-example-visibility.patch
reference_integration/scripts/: run_qemu
toolchain/: BUILD.bazel  MODULE.bazel  README.md
toolchain/autosd_10_gcc/: BUILD.bazel  extensions.bzl
toolchain/autosd_9_gcc/: BUILD.bazel  extensions.bzl
toolchain/common/: BUILD.bazel  BUILD.bazel.template  cc_toolchain_config.bzl.template  setup_toolchain.sh  toolchain_utils.bzl
