# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
package(default_visibility = ["//visibility:public"])

# Define the glibc version dimension
constraint_setting(
    name = "glibc_version",
)

# Glibc 2.34+ constraint for AutoSD 9 compatibility
constraint_value(
    name = "glibc_2_34_plus",
    constraint_setting = ":glibc_version",
)

# Glibc 2.39+ constraint for AutoSD 10/CentOS compatibility
constraint_value(
    name = "glibc_2_39_plus",
    constraint_setting = ":glibc_version",
)

# Platform definition for AutoSD 9 requiring glibc 2.34+
platform(
    name = "autosd9_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":glibc_2_34_plus",
    ],
)

platform(
    name = "autosd9_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        ":glibc_2_34_plus",
    ],
)

# Platform definition for AutoSD 10/CentOS requiring glibc 2.39+
platform(
    name = "autosd10_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        ":glibc_2_39_plus",
    ],
)

platform(
    name = "autosd10_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        ":glibc_2_39_plus",
    ],
)
