# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
package(default_visibility = ["//visibility:public"])

# Export the extension for use by other modules
exports_files([
    "extensions.bzl",
])

# Convenience alias to the generated toolchain
alias(
    name = "gcc_toolchain",
    actual = "@autosd_10_gcc_repo//:gcc_toolchain",
)
